# trader-web

./: .gitignore  pyproject.toml  tournament.py  vw_analytics_mercado_v2.py
analytics/: admin.py  api_urls.py  forms.py  helpers.py  models.py  serializers.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  (+69 more)
auth/: decorators.py  middleware.py  serializers.py  views.py
ciclo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
entrada/: api_urls.py  models.py  serializers.py  views.py
evento/: api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
eventos/: models.py
gerencia/: admin.py  forms.py  models.py  urls.py  views.py
grafico/: views.py
ia/: api_urls.py  services.py  views.py
league/: models.py  service.py
lucro/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
market/: api_urls.py  serializers.py  views.py
month_performace/: api_urls.py  apps.py  views.py
owner_ball/: admin.py  api_urls.py  apps.py  helpers.py  models.py  serializers.py  views.py
performace/: api_urls.py  api_views.py  urls.py
periodo/: forms.py  models.py  urls.py  views.py
prediction/: api_urls.py  models.py  views.py
score_data/: apps.py  models.py
setup/: settings.py  urls.py
shared/: enums.py  utils.py
sofascore/: apps.py  models.py
team/: api_urls.py  helpers.py  models.py  serializers.py  urls.py  views.py
team_sports/: apps.py  models.py
templatetags/: custom_filters.py
tournament/: api_urls.py  urls.py  views.py
unique_tournament/: api_urls.py  apps.py  models.py  urls.py  views.py
(+192 files in other folders)
