[project]
name = "trader-web"
version = "0.1.0"
description = ""
authors = [
    {name = "RodResq",email = "rodrigoresque@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
